--- a/antd-demo/package.json
+++ b/antd-demo/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "chaochenxin-react",
+  "name": "antd-demo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.25.2",
-    "babel-plugin-import": "^1.12.2",
-    "customize-cra": "^0.9.1",
-    "less": "^3.10.3",
-    "less-loader": "^5.0.0",
     "react": "^16.12.0",
-    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-scripts": "3.2.0"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
