--- a/package.json
+++ b/package.json
@@ -33,5 +33,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.19.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.4"
   }
 }
