--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-decorators": "^7.7.0",
     "antd": "^3.25.2",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.9.1",
@@ -36,7 +37,12 @@
   },
   "devDependencies": {
     "axios": "^0.19.0",
+    "babel": "^6.23.0",
+    "plugin": "^0.3.3",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   }
 }
