--- a/package.json
+++ b/package.json
@@ -38,11 +38,17 @@
   "devDependencies": {
     "axios": "^0.19.0",
     "babel": "^6.23.0",
+    "dayjs": "^1.8.17",
+    "i18next": "^19.0.1",
+    "i18next-browser-languagedetector": "^4.0.1",
+    "i18next-xhr-backend": "^3.2.2",
     "plugin": "^0.3.3",
+    "react-i18next": "^11.2.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "screenfull": "^5.0.0"
   }
 }
