--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
   "devDependencies": {
     "axios": "^0.19.0",
     "babel": "^6.23.0",
+    "braft-editor": "^2.3.8",
     "dayjs": "^1.8.17",
     "i18next": "^19.0.1",
     "i18next-browser-languagedetector": "^4.0.1",
     "i18next-xhr-backend": "^3.2.2",
     "plugin": "^0.3.3",
+    "prop-types": "^15.7.2",
     "react-i18next": "^11.2.2",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
